--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.0.6",
+    "@ant-design/dark-theme": "^2.0.2",
+    "@ant-design/icons": "^4.2.1",
     "@reduxjs/toolkit": "^1.2.5",
-    "antd": "^4.1.5",
+    "antd": "^4.4.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
@@ -14,7 +15,7 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^10.1.7",
     "moment": "^2.24.0",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
@@ -23,7 +24,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "use-query-params": "^0.6.0"
+    "use-query-params": "^1.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
